plugins {
    id 'java'
    id 'jacoco'
}

group = 'ru.nsu.kozorez'
version = '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}
tasks.wrapper {
    gradleVersion = "8.4"
    // You can either download the binary-only version of Gradle (BIN) or
    // the full version (with sources and documentation) of Gradle (ALL)
    distributionType = Wrapper.DistributionType.ALL
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'

    implementation 'com.google.code.gson:gson:2.10.1'

    implementation group: 'args4j',    name: 'args4j',         version: '2.33'
    implementation group: 'args4j',    name: 'args4j-site',    version: '2.33'
}

test {
    useJUnitPlatform()
}

jacocoTestReport {
    reports {
        xml.required = true
    }
}